Change colors, upgrade polybar, change background img

--- a/flameshot/flameshot.ini
+++ b/flameshot/flameshot.ini
@@ -4,12 +4,12 @@ checkForUpdates=true
 contrastOpacity=188
 copyPathAfterSave=true
 disabledTrayIcon=false
-drawColor=#800000
+drawColor=#00ffdd
 drawFontSize=27
 drawThickness=3
 fontFamily=Times New Roman
 ignoreUpdateToVersion=12.1.0
-savePath=/home/mohammad/Pictures
+savePath=/home/mohammad/Downloads
 savePathFixed=false
 showStartupLaunchMessage=true
 startupLaunch=true
