--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -3,54 +3,54 @@ margin-top = 32
 margin-bottom = 22
 
 [colors]
-primary = #0f1126
-secondary = #e60053
-alert = #bd2c40
-
-background = #000514
+primary = #030637
+background = #0F0F0F
 foreground = #7EC8E3
-
-mod_underline = #363959
+mod_underline = #3C0753
 
 [bar/the_one_bar]
 monitor = ${env:MONITOR}
 bottom = true
 border-size = 1
 width = 100%
-height = 25
-radius = 5.0
+height = 30
 fixed-center = true
 
-padding-left = 2
-padding-right = 4
+padding-left = 0
+padding-right = 0
 module-margin-left = 1
-module-margin-right = 2
+module-margin-right = 1
 
 background = ${colors.background}
 line-color = #f00
 border-color = #00000000
 
 locale = en_US.UTF-8
-font-0 = Ubuntu:style=Regular
+font-0 = Monaspace Krypton Semi Bold
 font-1 = "Font Awesome 6 Free:style=Regular:size=12;0"
 font-2 = "Font Awesome 6 Free:style=Solid:size=12;0"
 modules-left = cpu fan_speed memory backlight workspace
 modules-center = date time
 modules-right = volume microphone battery uptime
-
+override-redirect = false
 line-size = 3
-tray-position = right
+
+[module/tray]
+format = <tray>
+type = internal/tray
+tray-position = modules-right
 tray-padding = 1
-wm-restack = i3
-separator = | 
+tray-background = #7EC8E3
+
+
 
 
 [module/fan_speed]
 type = custom/script
 exec = ~/.config/polybar/polybar-scripts/system-fan-speed.sh
-interval = 10
+interval = 1
 format-prefix = " "
-format-padding = 2
+format-padding = 1
 format-underline = ${colors.mod_underline}
 format-background = ${colors.primary}
 
@@ -58,9 +58,7 @@ format-background = ${colors.primary}
 [module/workspace]
 type = internal/xworkspaces
 ; Only show workspaces defined on the same output as the bar
-; Useful if you want to show monitor specific workspaces
-; on different bars
-pin-workspaces = false
+pin-workspaces = true
 enable-click = true
 enable-scroll = false
 reverse-scroll = true
@@ -73,7 +71,7 @@ tail = true
 click-left = ~/.config/polybar/polybar-scripts/pulseaudio-microphone.sh --toggle &
 scroll-up = ~/.config/polybar/polybar-scripts/pulseaudio-microphone.sh --increase &
 scroll-down = ~/.config/polybar/polybar-scripts/pulseaudio-microphone.sh --decrease &
-format-prefix = ""
+format-prefix = " "
 
 [module/date]
 type = internal/date
@@ -104,7 +102,7 @@ full-at = 99
 battery = BAT0
 adapter = ADP1
 
-poll-interval = 5
+poll-interval = 30
 
 format-charging = <animation-charging> <label-charging>
 format-discharging = <ramp-capacity> <label-discharging>
@@ -131,32 +129,32 @@ animation-charging-2 = 
 animation-charging-3 = 
 animation-charging-4 = 
 ; Framerate in milliseconds
-animation-charging-framerate = 750
+animation-charging-framerate = 1000
 
 [module/backlight]
 type = internal/backlight
 label = %percentage%%
 format-prefix = " "
-format-padding = 2
+format-padding = 1
 format-underline = ${colors.mod_underline}
 format-background = ${colors.primary}
 card = amdgpu_bl0
 
 [module/cpu]
 type = internal/cpu
-interval = 3
+interval = 15
 label = %percentage%%
 format-prefix = " "
-format-padding = 2
+format-padding = 1
 format-underline = ${colors.mod_underline}
 format-background = ${colors.primary}
 
 [module/memory]
 type = internal/memory
-interval = 3
+interval = 15
 label = %percentage_used%%
 format-prefix = " "
-format-padding = 2
+format-padding = 1
 format-underline = ${colors.mod_underline}
 format-background = ${colors.primary}
 
@@ -181,7 +179,7 @@ ramp-volume-1 = 
 [module/uptime]
 type = custom/script
 exec = $HOME/.config/polybar/polybar-scripts/system-uptime-pretty.sh
-interval = 30
+interval = 60
 format-prefix = " "
-format-padding = 2
+format-padding = 1
 
