--- a/i3/config
+++ b/i3/config
@@ -35,7 +35,7 @@ bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOU
 floating_modifier $mod
 
 # start a terminal
-bindsym $mod+Return exec i3-sensible-terminal
+bindsym $mod+Return exec kitty
 
 # kill focused window
 bindsym $mod+Shift+q kill
@@ -186,15 +186,15 @@ for_window [class=".*"] border pixel 0
 exec --no-startup-id firefox
 exec --no-startup-id blueman-applet
 exec --no-startup-id flameshot
-exec --no-startup-id kdeconnect-applet
+exec --no-startup-id kdeconnectd
+exec_always --no-startup-id copyq # clipboard
 
-# My custom key bindings
+# Keybindings to execute screenshot
 bindsym --release Print exec flameshot gui
-
 bindsym shift+Print exec flameshot gui
 
 # Lock screen
-bindsym $mod+shift+p exec $HOME/.config/i3/i3lock-multimonitor/lock -i "$HOME/.config/i3/i3lock-multimonitor/lockscreen.png"
+bindsym $mod+shift+p exec $HOME/.config/i3/i3lock-multimonitor/lock -i "$HOME/.config/i3/storm.jpg"
 
 # Polybar
 exec_always --no-startup-id $HOME/.config/polybar/launch.sh
@@ -203,8 +203,8 @@ exec_always --no-startup-id $HOME/.config/polybar/launch.sh
 exec_always --no-startup-id $HOME/.config/i3/xrandr_layout.sh
 
 # feh command for wallpaper
-exec_always feh --bg-scale ./.config/i3/titan.png
+exec_always feh --bg-center ./.config/i3/v2.jpg
 
-# Cliboard 
-exec_always --no-startup-id copyq
-
+workspace 1 output eDP
+workspace 2 output DisplayPort-0
+workspace 3 output HDMI-A-O
