Update polybar modules for v3.7, Ubuntu 24

--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -9,9 +9,9 @@ foreground = #4772b5
 mod_underline = #17161f
 
 [bar/the_one_bar]
-monitor = ${env:MONITOR}
+monitor = ${env:MONITOR:}
 bottom = true
-border-size = 1
+border-size = 0
 width = 100%
 height = 30
 fixed-center = true
@@ -31,46 +31,36 @@ font-1 = "Font Awesome 6 Free:style=Thin:size=12;0"
 font-2 = "Font Awesome 6 Free:style=Solid:size=12;0"
 font-3 = "Feather:size=10.4;3.5"
 
-modules-left = cpu fan_speed memory backlight workspace 
-modules-center =  date time 
-modules-right = volume microphone battery uptime
+modules-left = menu-apps cpu fan_speed memory backlight workspace 
+modules-center =  date time
+modules-right = volume microphone battery uptime tray
 override-redirect = false
 line-size = 3
-tray-position = right
-
-tray-background = #333A73
 
 
 [module/tray]
 format = <tray>
 type = internal/tray
-tray-position = modules-right
-tray-padding = 2
+tray-spacing = 4
 
-[module/stockgainer]
-type = custom/script
-exec = ~/.config/polybar/polybar-scripts/polystock/polystock.py --biggestgainer
-;For continuous updates
-tail = false
-label = %output%
-format-foreground = "#00FF00"
+[module/menu-apps]
+type = custom/menu
+format-padding = 1
+label-open = 
+label-close = X
+label-separator = -
+; "menu-LEVEL-N" has the same properties as "label-NAME" with
+; the additional "exec" property
+;
+; Commands will be executed using "/bin/sh -c $COMMAND"
+; One day I will have usefull scripts that I want to execute from here
+menu-0-0 = Browsers
+menu-0-0-exec = #menu-apps.open.1
 
-[module/stockloser]
-type = custom/script
-exec = ~/.config/polybar/polybar-scripts/polystock/polystock.py --biggestloser 
-;For continuous updates
-tail = false
-label = %output%
-format-foreground = "#FF0000"
-
-
-[module/customStock]
-type = custom/script
-exec = ~/.config/polybar/polybar-scripts/polystock/polystock.py --customticker NVDA 
-;For continuous updates
-tail = false
-label = %output%
-format-foreground = "#0096FF"
+menu-1-0 = Firefox
+menu-1-0-exec = firefox
+menu-1-1 = Brave
+menu-1-1-exec = brave-browser
 
 [module/fan_speed]
 type = custom/script
@@ -99,6 +89,7 @@ click-left = ~/.config/polybar/polybar-scripts/pulseaudio-microphone.sh --toggle
 scroll-up = ~/.config/polybar/polybar-scripts/pulseaudio-microphone.sh --increase &
 scroll-down = ~/.config/polybar/polybar-scripts/pulseaudio-microphone.sh --decrease &
 format-prefix = " "
+format-fail = ""
 
 [module/date]
 type = internal/date
@@ -168,25 +159,28 @@ format-prefix = " "
 format-padding = 1
 format-underline = ${colors.mod_underline}
 format-background = ${colors.primary}
-card = amdgpu_bl0
+card = amdgpu_bl1
 
 [module/cpu]
 type = internal/cpu
-interval = 15
-label = %percentage%%
+interval = 20
+label = %percentage%% 
+label-warn = MAX %percentage%%
 format-prefix = " "
-format-padding = 1
 format-underline = ${colors.mod_underline}
 format-background = ${colors.primary}
+warn-percentage = 90
 
 [module/memory]
 type = internal/memory
-interval = 15
+interval = 20
 label = %percentage_used%%
+label-warn = MAX %gb_used%/%gb_free%
 format-prefix = " "
 format-padding = 1
 format-underline = ${colors.mod_underline}
 format-background = ${colors.primary}
+warn-percentage = 90
 
 [module/volume]
 type = internal/pulseaudio
@@ -205,6 +199,8 @@ label-muted-foreground = #666
 ; Only applies if <ramp-volume> is used
 ramp-volume-0 = 
 ramp-volume-1 = 
+click-right = pavucontrol
+
 
 [module/uptime]
 type = custom/script
