Remove excess bloat

--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -3,10 +3,9 @@ margin-top = 32
 margin-bottom = 22
 
 [colors]
-primary = #17161f
-background = #17161f
+background = #1F2D3A
 foreground = #4772b5
-mod_underline = #17161f
+mod_underline = #1ABC9C
 
 [bar/the_one_bar]
 monitor = ${env:MONITOR:}
@@ -31,7 +30,7 @@ font-1 = "Font Awesome 6 Free:style=Thin:size=12;0"
 font-2 = "Font Awesome 6 Free:style=Solid:size=12;0"
 font-3 = "Feather:size=10.4;3.5"
 
-modules-left = menu-apps cpu fan_speed memory backlight workspace 
+modules-left = cpu fan_speed memory backlight workspace
 modules-center =  date time
 modules-right = volume microphone battery uptime tray
 override-redirect = false
@@ -43,24 +42,6 @@ format = <tray>
 type = internal/tray
 tray-spacing = 4
 
-[module/menu-apps]
-type = custom/menu
-format-padding = 1
-label-open = 
-label-close = X
-label-separator = -
-; "menu-LEVEL-N" has the same properties as "label-NAME" with
-; the additional "exec" property
-;
-; Commands will be executed using "/bin/sh -c $COMMAND"
-; One day I will have usefull scripts that I want to execute from here
-menu-0-0 = Browsers
-menu-0-0-exec = #menu-apps.open.1
-
-menu-1-0 = Firefox
-menu-1-0-exec = firefox
-menu-1-1 = Brave
-menu-1-1-exec = brave-browser
 
 [module/fan_speed]
 type = custom/script
@@ -69,7 +50,6 @@ interval = 1
 format-prefix = " "
 format-padding = 1
 format-underline = ${colors.mod_underline}
-format-background = ${colors.primary}
 
 
 [module/workspace]
@@ -97,9 +77,8 @@ interval = 1.0
 
 date = %B %d %Y
 date-alt = %A %Y-%m-%d%
-format-prefix = "| "
 format = <label>
-label = %date% 
+label = %date%
 ; add  or  for icon
 
 
@@ -110,7 +89,6 @@ interval = 1.0
 time = %H.%M
 time-alt = %H:%M:%S
 
-format-suffix = " |"
 format =  <label>
 label = %time%
 
@@ -158,28 +136,26 @@ label = %percentage%%
 format-prefix = " "
 format-padding = 1
 format-underline = ${colors.mod_underline}
-format-background = ${colors.primary}
 card = amdgpu_bl1
 
 [module/cpu]
 type = internal/cpu
-interval = 20
-label = %percentage%% 
-label-warn = MAX %percentage%%
+interval = 30
+label = %percentage%%
+label-warn = MAXIMUM %percentage%%
 format-prefix = " "
+format-padding = 1
 format-underline = ${colors.mod_underline}
-format-background = ${colors.primary}
 warn-percentage = 90
 
 [module/memory]
 type = internal/memory
-interval = 20
+interval = 30
 label = %percentage_used%%
 label-warn = MAX %gb_used%/%gb_free%
 format-prefix = " "
 format-padding = 1
 format-underline = ${colors.mod_underline}
-format-background = ${colors.primary}
 warn-percentage = 90
 
 [module/volume]
@@ -205,7 +181,7 @@ click-right = pavucontrol
 [module/uptime]
 type = custom/script
 exec = $HOME/.config/polybar/polybar-scripts/system-uptime-pretty.sh
-interval = 60
+interval = 1200 # formerly 60
 format-prefix = " "
 format-padding = 1
 
