--- a/i3/config
+++ b/i3/config
@@ -21,10 +21,6 @@ font pango:DejaVu Sans Mono 8
 # exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
 # ^ line above is useless, I think - its locking on inactivity
 
-# NetworkManager is the most popular way to manage wireless networks on Linux,
-# and nm-applet is a desktop environment-independent system tray GUI for it.
-exec --no-startup-id nm-applet
-
 # Use pactl to adjust volume in PulseAudio.
 set $refresh_i3status killall -SIGUSR1 i3status
 bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +10% && $refresh_i3status
@@ -41,13 +37,8 @@ bindsym $mod+Return exec kitty
 # kill focused window
 bindsym $mod+Shift+q kill
 
-# start dmenu (a program launcher)
-bindsym $mod+d exec --no-startup-id rofi -show drun -show-icons
-# A more modern dmenu replacement is rofi:
-# bindcode $mod+40 exec "rofi -modi drun,run -show drun"
-# There also is i3-dmenu-desktop which only displays applications shipping a
-# .desktop file. It is a wrapper around dmenu, so you need that installed.
-# bindcode $mod+40 exec --no-startup-id i3-dmenu-desktop
+# start rofi instead of dmenu for program launching
+bindsym $mod+d exec --no-startup-id $HOME/.config/rofi/scripts/launcher_t6
 
 focus_follows_mouse no
 
@@ -173,55 +164,45 @@ mode "resize" {
 
 bindsym $mod+r mode "resize"
 
-# This lets certain windows float, use `xprop` to find class, instance, title, id, etc.
-# Netbeans GUI Assignments
-for_window [class="anwar*"] floating enable
-
 #i3-gaps
 for_window [class=".*"] border pixel 0
-#gaps inner 4
-#hide_edge_borders both
-#smart_gaps on 
 
-# Automatically startup applications
-exec --no-startup-id firefox
-exec --no-startup-id blueman-applet
-exec --no-startup-id flameshot
-exec --no-startup-id kdeconnect-indicator
-exec_always --no-startup-id copyq # clipboard
+
+# This lets certain windows float, use `xprop` to find class, instance, title, id, etc.
+# Netbeans GUI Assignments
+for_window [class="rstudio"] title~"~/Documents/university/STAA57/WS1/first_report.html" floating enable
+
+
+#############
+## Startup ##
+#############
+exec --no-startup-id /usr/libexec/gsd-xsettings # Gnome theming script (fixes dark mode issues, various UI glitches)
+exec feh --bg-scale ./.config/i3/worm.jpg ./.config/i3/dune2.jpg ./.config/i3/stand.png # Feh for wallpaper management
+exec --no-startup-id pulseaudio -D # Run pulseaudio in the background
+exec --no-startup-id nm-applet # Network manager applet
 exec_always --no-startup-id dunst -config ~/.config/dunst/dunstrc
+
+exec_always --no-startup-id $HOME/.config/i3/monitors.sh
+
+exec --no-startup-id blueman-applet # Bluetooth manager
+exec --no-startup-id flameshot # Screenshot tool
+exec --no-startup-id kdeconnect-indicator # KDE Connect to phone applet
+exec --no-startup-id copyq # Clipboard manager
+exec_always --no-startup-id $HOME/.config/polybar/launch.sh
 
 # Keybindings to execute screenshot
 bindsym --release Print exec flameshot gui
 bindsym shift+Print exec flameshot gui
 
-# Lock screen
+# Lock screen binding
 bindsym $mod+shift+p exec $HOME/.config/i3/i3lock-multimonitor/lock -i "$HOME/.config/i3/storm.jpg"
 
-# Polybar
-exec_always --no-startup-id $HOME/.config/polybar/launch.sh
-
-# Xrandr layout for monitors
-# exec_always --no-startup-id $HOME/.config/i3/xrandr_layout.sh
-
-# feh command for wallpaper
-exec_always feh --bg-scale ./.config/i3/worm.jpg ./.config/i3/dune2.jpg ./.config/i3/stand.png
-
-# Next 3 commands were added after installing Ubuntu24
-# execute gnome theme script, this makes everything perfect
-exec --no-startup-id /usr/libexec/gsd-xsettings
-
-# startup compositor 
-# nvm no compositor
-# start pulseaudio daemon
-exec --no-startup-id pulseaudio -D
-
+# Brightness keys fix
+bindsym XF86MonBrightnessUp exec --no-startup-id brightnessctl set +5%
+bindsym XF86MonBrightnessDown exec --no-startup-id brightnessctl set 5%-
 
 workspace 1 output eDP
 workspace 2 output DisplayPort-0
-workspace 2 output HDMI-A-O
+workspace 3 output HDMI-A-O
 
-exec_always --no-startup-id $HOME/.config/i3/monitors.sh
-bindsym XF86MonBrightnessUp exec --no-startup-id brightnessctl set +5%
-
-bindsym XF86MonBrightnessDown exec --no-startup-id brightnessctl set 5%-
+exec --no-startup-id firefox # Start Firefox on login
